[tool.poetry]
name = "pet-expressions"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow = "2.10"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
